--- a/backend/src/utils/email/template/requestResetPassword.handlebars
+++ b/backend/src/utils/email/template/requestResetPassword.handlebars
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <p>Hi {{name}},</p>
+    <p>Hi {{nombre}},</p>
     <p>You requested to reset your password.</p>
     <p>Please, click the link below to reset your password</p>
     <a href="https://{{link}}">Reset Password</a>
