--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="flex flex-1 items-center justify-between sm:items-center sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
-            <img class="h-24 w-auto" src="assets/img/logo-uru.png" alt="logo-uruguayos">
+            <img class="h-24 w-auto" src="/assets/img/logo-uru.png" alt="logo-uruguayos">
           </div>
           <div class="hidden sm:ml-6 sm:block">
             <div class="flex items-center space-x-4">
