--- a/src/app/componentes/mapa/mapa.component.html
+++ b/src/app/componentes/mapa/mapa.component.html
@@ -1,1 +1,23 @@
-<p>mapa works!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="map-container">
+      <div id="map"></div>
+      <div class="card-container">
+
+        @for (negocio of negocios; track negocios.titulo) {
+
+        <div class="card">
+          <h3>{{ negocio.titulo }}</h3>
+          <p>Ubicación: {{ negocio.ubicacion }}</p>
+        </div>
+        }
+      </div>
+    </div>
+  </body>
+</html>
