--- a/src/app/presentacion/presentacion.component.html
+++ b/src/app/presentacion/presentacion.component.html
@@ -9,10 +9,10 @@
 <body class="bg-gray-50 text-gray-900">
 
   <!-- Hero Section -->
-  <section class="bg-yellow-500 text-white py-16">
+  <section class="bg-teal-400 text-white py-16">
     <div class="max-w-7xl mx-auto text-center">
-      <h1 class="text-4xl font-semibold text-teal-100">Historia</h1>
-      <p class="mt-4 text-lg text-teal-100">Conectando a los uruguayos en España desde 2021</p>
+      <h1 class="text-4xl font-semibold text-white">Historia</h1>
+      <p class="mt-4 text-lg text-white">Conectando a los uruguayos en España desde 2021</p>
     </div>
   </section>
 
@@ -22,21 +22,21 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
         <!-- Paola Miramontes -->
         <div class="flex flex-col items-center">
-          <img src="assets/img/img-paola.jpeg" alt="Paola Miramontes" class="w-48 h-48 rounded-full border-4 border-teal-600 shadow-lg">
-          <h2 class="mt-4 text-2xl font-bold text-yellow-500">Paola Miramontes</h2>
+          <img src="assets/img/img-paola.jpeg" alt="Paola Miramontes" class="w-48 h-48 rounded-full border-4 border-yellow-500 shadow-lg">
+          <h2 class="mt-4 text-2xl font-bold text-teal-800">Paola Miramontes</h2>
           <p class="text-lg text-center mt-2">Creadora del proyecto "Uruguayos en España"</p>
           <div><br><br><br><br>
-            <h3 class="text-2xl text-start font-semibold mb-4 text-yellow-500">Misión</h3>
+            <h3 class="text-2xl text-start font-semibold mb-4 text-teal-800">Misión</h3>
             <p class="text-lg text-start mt-2">Conectar y visibilizar a los uruguayos en España, apoyando a los emprendedores y compartiendo las historias que nos unen como comunidad.</p>
             <br>
-            <h3 class="text-2xl text-start font-semibold mt-8 mb-4 text-yellow-500">Visión</h3>
+            <h3 class="text-2xl text-start font-semibold mt-8 mb-4 text-teal-800">Visión</h3>
             <p class="text-lg text-start mt-2">Ser la plataforma líder para todos los uruguayos en España, brindando contenido relevante, actualizado y ofreciendo oportunidades de conexión entre los miembros de la comunidad.</p>
           </div>
         </div>       
 
         <!-- Descripción del proyecto -->
         <div>
-          <h2 class="text-3xl font-semibold mb-4 text-yellow-500">Como surgió</h2>
+          <h2 class="text-3xl font-semibold mb-4 text-teal-800">Como surgió</h2>
           <p class="text-lg">
             El proyecto "Uruguayos en España" nació en 2021, cuando me di cuenta de que no existía un espacio profesional y accesible para conectar a los uruguayos que vivimos en España. Como muchos de nosotros, al llegar aquí me encontré con la necesidad de encontrar lugares y servicios de calidad que representaran nuestra cultura y raíces. Empecé a buscar restaurantes, panaderías y otros negocios uruguayos, y me di cuenta de que muchos de estos lugares no estaban fácilmente accesibles en línea, ni siquiera en redes sociales.
           </p>
