--- a/src/app/componentes/user/registro/registro.component.html
+++ b/src/app/componentes/user/registro/registro.component.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="flex items-center justify-center min-h-screen">
-      <div class="bg-yellow-100 bg-opacity-80 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
+      <div class="bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
         <div class="flex justify-center mb-6">
           <img src="/assets/img/logo-uru.png" alt="LogoUru" class="w-32 h-auto" />
         </div>
