--- a/src/app/componentes/user/login/login.component.html
+++ b/src/app/componentes/user/login/login.component.html
@@ -1,9 +1,11 @@
 <div class="flex items-center justify-center min-h-screen login-container">
     <div class="bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
       <div class="flex justify-center mb-6">
+        <a href="/home">
         <img src="/assets/img/logo-uru.png" 
              alt="LogoUru" 
              class="w-32 h-auto"/>
+        </a>
       </div>
       <h2 class="text-lg font-semibold text-left text-black mb-4">Iniciar Sesión</h2>
   
